# ZCam-NDI

./: .gitignore  README.md  settings.gradle
NDICore/: build.gradle
NDICore/src/main/java/com/ndi/android/: NDIReceiver.java  NDISender.java
NDIforAndroid/: build.gradle
NDIforAndroid/src/main/java/com/ndi/android/: NDIlib.java
app/: build.gradle
app/src/androidTest/java/com/zer0/zcam_ndi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NDIlib_jni.cpp
app/src/main/java/com/zer0/zcam_ndi/: MainActivity.kt  NDISender.kt  NDIlib.kt
app/src/main/java/com/zer0/zcam_ndi/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/zer0/zcam_ndi/: ExampleUnitTest.kt
docs/: EstruturaTREE.txt  NDI.md  NDIAndroid.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
